src/objects/AssocitedDocument__c.object
<CustomObject>
    <fields>
        <fullName>DocumentPacket__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DocumentPacket</label>
        <referenceTo>Document_Packet__c</referenceTo>
        <relationshipLabel>AssociatedDocuments</relationshipLabel>
        <relationshipName>AssociatedDocuments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Due_Days__c</fullName>
        <label>Due Days</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entity_Id__c</fullName>
        <label>Entity Id</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Type__c</fullName>
        <label>Entity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Admission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Person Being Served</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Assignment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Filed_Date__c</fullName>
        <label>Filed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsAdded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsAdded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MasterDocument__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MasterDocument</label>
        <referenceTo>MasterDocument__c</referenceTo>
        <relationshipLabel>AssociatedDocuments</relationshipLabel>
        <relationshipName>AssociatedDocuments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recurring_Frequency__c</fullName>
        <label>Recurring Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half-Yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recurring__c</fullName>
        <label>Recurring</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>AssociatedDocument</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AssociatedDocuments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>